--- a/Modelo/Modelo.csproj
+++ b/Modelo/Modelo.csproj
@@ -49,6 +49,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ContextInitializer.cs" />
+    <Compile Include="Migrations\201608030022083_InitialCreate.cs" />
+    <Compile Include="Migrations\201608030022083_InitialCreate.Designer.cs">
+      <DependentUpon>201608030022083_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Autor.cs" />
     <Compile Include="Editorial.cs" />
@@ -57,9 +63,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Properties\DataSources\Autor.datasource" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201608030022083_InitialCreate.resx">
+      <DependentUpon>201608030022083_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
