--- a/Modelo/Modelo.csproj
+++ b/Modelo/Modelo.csproj
@@ -37,6 +37,9 @@
     <Reference Include="EntityFramework.SqlServer">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net40\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="SimpleInjector">
+      <HintPath>..\Vista\packages\SimpleInjector.3.2.0\lib\net40-client\SimpleInjector.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -60,6 +63,7 @@
     <Compile Include="Editorial.cs" />
     <Compile Include="Libro.cs" />
     <Compile Include="Context.cs" />
+    <Compile Include="SingletonContext.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
