--- a/Vista/App.Config
+++ b/Vista/App.Config
@@ -7,7 +7,7 @@
   <!--(localdb)\v11.0-->
   <connectionStrings>
     <add name="Default"                  
-       connectionString="Data Source=(localdb)\MSSQLLocalDB;Integrated Security=SSPI;Initial Catalog=Biblioteca"
+       connectionString="Data Source=(localdb)\v11.0;Integrated Security=SSPI;Initial Catalog=Biblioteca"
        providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
