--- a/Controladora/Controladora.csproj
+++ b/Controladora/Controladora.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extension\PredicateBuilder.cs" />
     <Compile Include="Libro.cs" />
     <Compile Include="Autor.cs" />
     <Compile Include="Editorial.cs" />
